--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
         cache: 'npm'
 
     - name: Install depedencies
-      run: npm ci # run: npm install is similar
+      run: npm install # run: npm ci 
 
     - run: npm run build --if-present
 
