--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,13 +11,9 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-
     steps:
     - uses: actions/checkout@v3
-
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -29,14 +25,23 @@ jobs:
 
     - run: npm run build --if-present
 
-    
+  test:
+    runs-on: ubuntu-latest
+    steps:
     - name: Run Tests
       run: npm test
 
-    - name: Send Coverage to Coveralls
-      run: |
-        npm install -g coveralls
-        coveralls --file coverage/lcov-report/lcov.info
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2.2.3
+  
+      - name: Install Dependencies
+        run: npm install -g coveralls
+
+      - name: Send Coverage to Coveralls
+        run: coveralls --file coverage/lcov-report/lcov.info
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
     
