--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,12 +26,25 @@ jobs:
     - run: npm run build --if-present
 
   test:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Run Tests
-      run: npm test
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Tests
+        run: npm test
 
   coverage:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Coveralls GitHub Action
