--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -47,8 +47,8 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@v2.2.3
+#      - name: Coveralls GitHub Action
+ #       uses: coverallsapp/github-action@v2.2.3
   
       - name: Install Dependencies
         run: npm install -g coveralls
