--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,14 +47,22 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
+    - name: npm install, make test-coverage
+      run: |
+        npm install
+        make test-coverage
+
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2.2.3
+
 #      - name: Coveralls GitHub Action
  #       uses: coverallsapp/github-action@v2.2.3
   
-      - name: Install Dependencies
-        run: npm install -g coveralls
+#      - name: Install Dependencies
+#        run: npm install -g coveralls
 
-      - name: Send Coverage to Coveralls
-        run: coveralls --file coverage/lcov-report/lcov.info
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+#      - name: Send Coverage to Coveralls
+#        run: coveralls --file coverage/lcov-report/lcov.info
+#        env:
+#          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
     
