--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,22 +47,24 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - name: npm install, make test-coverage
-      run: |
-        npm install
-        make test-coverage
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Coveralls
-      uses: coverallsapp/github-action@v2.2.3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
 
-#      - name: Coveralls GitHub Action
- #       uses: coverallsapp/github-action@v2.2.3
-  
-#      - name: Install Dependencies
-#        run: npm install -g coveralls
+      - name: Install dependencies
+        run: npm install
+             make test-coverage
 
-#      - name: Send Coverage to Coveralls
-#        run: coveralls --file coverage/lcov-report/lcov.info
-#        env:
-#          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2.2.3
+
+
+      - name: Send Coverage to Coveralls
+        run: coveralls --file coverage/lcov.info
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
     
