--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -57,7 +57,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-             make test-coverage
+
+      - name: Run Tests to create coverage report
+        run: npm test -- --coverage
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2.2.3
