GHUB Actions - coverage - continue on error

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -63,6 +63,7 @@ jobs:
 
       - name: Run Tests to create coverage report
         run: npm test -- --coverage
+        continue-on-error: true
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2.2.3
